nextjs_frontend/components/stopSearchDashboard/StopSearchController.module.css
.stopSearchDashboard {
    display: grid;
    grid-template-columns: minmax(23rem, 1fr);
    grid-template-areas: 
    "title"
    "select"
    "statsGrid"
    "contributors";
}

.stopSearchDashboard h1 {
    grid-area: title;
    display: flex;
    justify-self: start;
}

.diffGroupUp {
    display: flex;
    width: fit-content;
    background-color: var(--green-icon-background);
    padding: .8rem;
    gap: .8rem;
    border-radius: 3rem;
    border: .2rem solid var(--green-icon-border);
    align-items: flex-end;
}

.diffGroupDown {
    display: flex;
    width: fit-content;
    background-color: var(--red-icon-background);
    padding: .8rem;
    gap: .8rem;
    border-radius: 3rem;
    border: .2rem solid var(--red-icon-border);
    align-items: flex-end;
}

.diffGroupNoChange {
    display: flex;
    width: fit-content;
    background-color: var(--grey-icon-background);
    padding: .8rem;
    border-radius: 3rem;
    border: .2rem solid var(--grey-icon-border);
    align-items: flex-end;
}

.arrowTrendingDown {
    color: var(--red-icon-text);
    height: 2rem;
}

.arrowTrendingUp {
    color: var(--green-icon-text);
    height: 2rem;
}

.minus {
    color: var(--grey-icon-text);
    height: 2rem;
}

.diffGroupUp svg, .diffGroupDown svg, .diffGroupNoChange svg {
    stroke-width: 2.4px;
}

.statsGridTitle {
    letter-spacing: .08rem;
}

.raceStat, .genderStat {
    height: 100%;
}

.raceStat, .genderStat, .totalStat {
    box-shadow: 0 1rem 1.5rem var(--coarse-shadow), 0 .4rem .6rem var(--fine-shadow);
    background-color: var(--card-background-colour);
}
  
.raceStat button, .genderStat button, .totalStat button {
  box-shadow: 0 .2rem .3rem var(--button-shadow), inset 0 .1rem 0 var(--button-inset-colour-2);
}

.raceStat button:active, .genderStat button:active, .totalStat button:active {
  box-shadow: none;
}

.chevronRight {
    height: 1.6rem;
}

.selectInputs {
    grid-area: select;
    display: flex;
    flex-direction: column;
    gap: 1.6rem;
    width: 100%;
    min-width: 20rem;
    max-width: 35rem;
}

.forceSelect  *{
    color: var(--text-colour);
}

.forceSelect input {
    box-shadow: inset 0 .2rem .2rem var(--coarse-shadow), 0 .2rem 0 var(--input-inset-focus-colour);
    background-color: var(--bg-colour);
}
.forceSelect input:focus {
    background-color: var(--input-focus-colour);
}

.statsGrid {
    grid-area: statsGrid;
}

.contributors {
    grid-area: contributors;
    display: flex;
    flex-direction: column;
    gap: 1.6rem;
    align-items: flex-start;
}

.contributors span {
    color: var(--support-text-colour);
}

.avatarImages {
    display: flex;
    gap: 3.2rem;
}

.avatarImages a {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
}

.avatarImages a:visited span {
    color: var(--support-text-colour);
}

.avatarImages a:hover span {
    color: var(--brand-orange);
}

.image {
    border-radius: 50%;
}

@media (min-width: 800px) {
    .selectInputs {
        flex-direction: row;
        gap: 1.6rem;
        width: 100%;
        min-width: none;
        max-width: none;
        align-items: flex-end;
    }

    .forceSelect, .MuiTextField-root {
        width: 30rem;
    }
}

@media(min-width: 1536px) {
    .stopSearchDashboard {
        grid-template-columns: minmax(max-content, max-content);
        grid-template-areas:
        "title"
        "select"
        "statsGrid"
        "contributors";
    }
}

@media(max-width: 450px) {
    .avatarImages {
        flex-direction: column;
        align-items: center;
        gap: 1.6rem;
    }
}

.error { 
    padding-top: 2.4rem;
}

